crates/solidity-v2/testing/snapshots/cst_output/from_v1/UsingDirective/destructure_empty/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseBrace. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, LayoutKeyword_Unreserved, RevertKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/UsingDirective/destructure_empty/input.sol:3:8]
   │
 3 │ using {} for *;
   │        ┬  
   │        ╰── Error occurred here.
───╯
